<resources>
    <string name="app_name">T1DteensClient</string>
    
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_back_to_login">Back to login form</string>
    <string name="general_settings">general settings</string>
    <string name="sync">sync</string>
    <string name="accountType">org.coursera.capstone</string>
    <string name="contentAuthority">org.coursera.capstone.T1DTeensService.provider</string>

    <string-array name="genders_array">
        <item>MALE</item>
        <item>FEMALE</item>
    </string-array>

    <string-array name="user_types_array">
        <item>TEEN</item>
        <item>PARENT</item>
        <item>CLINICIAN</item>
    </string-array>

    <string-array name="drawer_items_array">
        <item>Home</item>
        <item>Checkins</item>
        <item>Subscriptions</item>
        <item>Preferences</item>
        <item>Log out</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="Unfollow">Unfollow</string>
    <string name="Pending">Pending</string>
    <string name="Follow">Follow</string>
    <string name="pending">pending</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">log in</string>
    <string name="register">register</string>
    <string name="Confirm">Confirm</string>
    <string name="Accepted">Accepted</string>
    <string name="Rejected">Rejected</string>
    <string name="title_activity_checkin">CheckinActivity</string>
    <string name="action_settings">Settings</string>
    <string name="checkin_save_fail">failed to save new checkin</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="skipped_checkin_click">Skipped checkin has no details</string>
    <string name="reminders_settings">Reminders</string>
    <string name="user_settings">User details</string>
    <string name="current_user_id">User id</string>
    <string name="current_user_username">Username</string>
    <string name="current_user_password">Password</string>
    <string name="current_user_firstname">Your first name</string>
    <string name="current_user_lastname">Your last name</string>
    <string name="current_user_dob">Your date of birth</string>
    <string name="current_user_medical_record">Your medical record number</string>
    <string name="current_user_gender">Your gender</string>
    <string name="current_user_type">User type you are</string>
    <string name="share_policy_settings">Share policy</string>
    <string name="current_user_firstname_policy">Show first name</string>
    <string name="current_user_lastname_policy">Show last name</string>
    <string name="current_user_dob_policy">Show date of birth</string>
    <string name="current_user_medical_record_policy">Show medical record number</string>
    <string name="current_user_gender_policy">Show gender</string>
    <string name="current_user_checkins_policy">Show checkins</string>
    <string name="User_details_summary">Add or change information about yourself</string>
    <string name="privacy_policy_summary">Select which of your personal data you want to share with others</string>
    <string name="reminders_summary">Select when you want to receive checkin reminders</string>
    <string name="title_activity_user">User stats</string>
    <string name="title_activity_register">Registration</string>
</resources>
