<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:key="button_user_details"
        android:title="@string/user_settings"
        android:persistent="true"
        android:summary="@string/User_details_summary"
        android:icon="@drawable/user_36">
        <PreferenceCategory>
            <Preference
                android:key="currentUserId"
                android:title="@string/current_user_id"
                android:persistent="true"/>
            <EditTextPreference
                android:key="currentUserUsername"
                android:title="@string/current_user_username"
                android:persistent="true"
                android:selectable="true"/>
            <EditTextPreference
                android:key="currentUserPassword"
                android:title="@string/current_user_password"
                android:persistent="true"
                android:password="true"/>
            <EditTextPreference
                android:key="currentUserFirstName"
                android:title="@string/current_user_firstname"
                android:persistent="true"/>
            <EditTextPreference
                android:key="currentUserLastName"
                android:title="@string/current_user_lastname"
                android:persistent="true"/>
            <Preference
                android:key="currentUserDOB"
                android:title="@string/current_user_dob"
                android:persistent="true"
                android:defaultValue="2000-01-01"/>
            <EditTextPreference
                android:key="currentUserMedrec"
                android:title="@string/current_user_medical_record"
                android:persistent="true"
                android:numeric="integer"/>
            <ListPreference
                android:key="currentUserGender"
                android:title="@string/current_user_gender"
                android:entries="@array/genders_array"
                android:entryValues="@array/genders_array"
                android:persistent="true"/>
            <ListPreference
                android:key="currentUserType"
                android:title="@string/current_user_type"
                android:entries="@array/user_types_array"
                android:entryValues="@array/user_types_array"
                android:persistent="true"/>
        </PreferenceCategory>

    </PreferenceScreen>
    <PreferenceScreen
        android:key="button_share_policy"
        android:title="@string/share_policy_settings"
        android:persistent="true"
        android:summary="@string/privacy_policy_summary"
        android:icon="@drawable/user_policy_36">
        <CheckBoxPreference
            android:key="currentUserFirstName_policy"
            android:title="@string/current_user_firstname_policy"
            android:defaultValue="true"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="currentUserLastName_policy"
            android:title="@string/current_user_lastname_policy"
            android:defaultValue="true"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="currentUserDOB_policy"
            android:title="@string/current_user_dob_policy"
            android:defaultValue="true"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="currentUserMedrec_policy"
            android:title="@string/current_user_medical_record_policy"
            android:defaultValue="true"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="currentUserGender_policy"
            android:title="@string/current_user_gender_policy"
            android:defaultValue="true"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="currentUserCheckins_policy"
            android:title="@string/current_user_checkins_policy"
            android:defaultValue="true"
            android:persistent="true"/>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="button_reminders"
        android:title="@string/reminders_settings"
        android:persistent="false"
        android:summary="@string/reminders_summary"
        android:icon="@drawable/bell_36">
        <PreferenceCategory>
            <SwitchPreference
                android:key="reminders_enabled"
                android:title="Enable reminders"
                android:defaultValue="false" />
            <Preference
                android:key="reminder_1"
                android:title="Reminder 1"
                android:dependency="reminders_enabled"
                android:defaultValue="9:00"/>
            <Preference
                android:key="reminder_2"
                android:title="Reminder 2"
                android:dependency="reminders_enabled"
                android:defaultValue="14:00"/>
            <Preference
                android:key="reminder_3"
                android:title="Reminder 3"
                android:dependency="reminders_enabled"
                android:defaultValue="19:00"/>
        </PreferenceCategory>
    </PreferenceScreen>

</PreferenceScreen>