<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_login">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/register_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/username_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="teen2" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/pass_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/username_layout">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="2222" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/spinners_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/pass_layout"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/editText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="What user type you " />

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/user_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:entries="@array/user_types_array"
                            android:focusable="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="2">

                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Your gender" />

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:entries="@array/genders_array"/>

                    </LinearLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/firstName_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="false"
                    android:layout_below="@+id/spinners_layout">

                    <EditText
                        android:id="@+id/firstName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="20"
                        android:hint="Your first name"
                        android:inputType="textPersonName"
                        android:text="Bill" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lastName_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="false"
                    android:layout_below="@+id/firstName_layout">

                    <EditText
                        android:id="@+id/lastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="20"
                        android:hint="Your last name"
                        android:inputType="textPersonName"
                        android:text="Clinton" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/dob_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/lastName_layout"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/dob_text_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/dob"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="13"
                            android:enabled="false"
                            android:hint="Your date of birth"
                            android:inputType="date"
                            android:text="12 October 2015" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_pick_dob"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:width="50dp"
                        android:background="@android:drawable/ic_menu_my_calendar"
                        android:onClick="showDatePickerDialog" />
                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/medRec_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="false"
                    android:layout_below="@+id/dob_layout">

                    <EditText
                        android:id="@+id/medRecord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="20"
                        android:hint="Your medical record No."
                        android:inputType="number"
                        android:text="2222" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/register_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="false"
                    android:layout_below="@+id/medRec_layout"
                    android:layout_gravity="left"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/action_register"
                    android:textStyle="bold" />

            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
